--- a/euler-ode/css/style.css
+++ b/euler-ode/css/style.css
@@ -2,7 +2,7 @@
     font-family: helvetica;
     text-align: center;
     color: teal;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 #output {
@@ -14,6 +14,7 @@
 #table-out {
     margin-left: 12px;
     width: 96%;
+    min-width: 800px;
 }
 
 #table-out thead {
@@ -51,11 +52,12 @@
 
 #form-init {
     margin-left: 12px;
+    min-width: 720px;
 }
 
 span.vlabel {
     text-align: right;
-    width: 90pt;
+    width: 96px;
     display: inline-block;
 }
 
